// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerOptions renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "gap": 24,
    }
  }
  indicatorStyle="black"
  onStartShouldSetResponder={[Function]}
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View />
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there are highlighted options 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "gap": 24,
    }
  }
  indicatorStyle="black"
  onStartShouldSetResponder={[Function]}
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <DrawerOption
      highlighted={true}
      onPress={[Function]}
      subtext="testSubtext"
      title="testLabel"
    />
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "backgroundColor": "#EAE3DF",
            "height": 1,
          },
          {
            "backgroundColor": "#FCCCB6",
          },
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there are options 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "gap": 24,
    }
  }
  indicatorStyle="black"
  onStartShouldSetResponder={[Function]}
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <DrawerOption
      onPress={[Function]}
      title="testLabel"
    />
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "backgroundColor": "#EAE3DF",
            "height": 1,
          },
          undefined,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there is content 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "gap": 24,
    }
  }
  indicatorStyle="black"
  onStartShouldSetResponder={[Function]}
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      testContent
    </Text>
  </View>
</RCTScrollView>
`;
